syntax = "proto3";

// config options
option java_multiple_files = true;
option java_package = "taxPaymentService";
option java_outer_classname = "PaymentBalanceServiceImpl";


package paymentServices;

service AmountTotalDue {
  // unary RPC
  rpc checkAmount(PaymentRequest) returns (PaymentResponse);

     //server side streaming
  rpc Listoverduepayer(ListRequest) returns (stream ListResponse){}

  // bidirection RPC - send stream of next tax payments
  rpc confirmTaxPayments(stream TaxPaymentsRequest) returns (stream TaxPaymentsResponse);
}

// checkPaymentBalance request message: string
message PaymentRequest{
  string totalDue = 1;
}
// checkPaymentBalance response message string
message PaymentResponse{
  string totalDue = 1;
}
// confirmTaxPayments request message: string
message TaxPaymentsRequest{
  string taxPayments = 1;
}
// confirmTaxPayments response message: string
message TaxPaymentsResponse{
  string taxPayments = 1;
}

message ListRequest{
  string ask=1;
}
message ListResponse{
  string ans=1;
}